<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/playgameBtn"
        android:layout_width="182dp"
        android:layout_height="40dp"
        android:layout_marginTop="184dp"
        android:layout_marginBottom="379dp"
        android:background="#9C02D1CA"
        android:onClick="playGame"
        android:text="@string/play_game"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/lay"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/lay"
        android:contentDescription="@string/sixth"
        app:columnCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.821"
        app:rowCount="3">

        <ImageView
            android:id="@+id/ImageView0"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/first"
            android:onClick="dropIn"
            android:tag="0"
            app:layout_column="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_row="0" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/second"
            android:onClick="dropIn"
            android:tag="1"
            app:layout_column="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_row="0" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/third"
            android:onClick="dropIn"
            android:tag="2"
            app:layout_column="2"
            app:layout_row="0" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/fourth"
            android:onClick="dropIn"
            android:tag="3"
            app:layout_column="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_row="1" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/fifth"
            android:onClick="dropIn"
            android:tag="4"
            app:layout_column="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_row="1" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/sixth"
            android:onClick="dropIn"
            android:tag="5"
            app:layout_column="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_row="1" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="7dp"
            android:contentDescription="@string/seventh"
            android:onClick="dropIn"
            android:tag="6"
            app:layout_column="0"
            app:layout_row="2" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="7dp"
            android:contentDescription="@string/eighth"
            android:onClick="dropIn"
            android:tag="7"
            app:layout_column="1"
            app:layout_row="2" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="7dp"
            android:contentDescription="@string/nineth"
            android:onClick="dropIn"
            android:tag="8"
            app:layout_column="2"
            app:layout_row="2" />
    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:id="@+id/winnerTxt"
        android:layout_width="199dp"
        android:layout_height="44dp"
        android:layout_marginTop="100dp"
        android:background="#FBC02D"
        android:text="@string/has_won"
        android:textAlignment="center"
        android:textSize="28sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="85dp"
        android:layout_height="34dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/darker_gray"
        android:onClick="backFun"
        android:text="@string/back"
        android:textSize="24sp"
        android:textStyle="italic"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logoImg"
        android:layout_width="444dp"
        android:layout_height="154dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/logoimage"
        app:layout_constraintBottom_toTopOf="@+id/playgameBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tictactoe" />

    <Button
        android:id="@+id/againBtn"
        android:layout_width="85dp"
        android:layout_height="34dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@android:color/darker_gray"
        android:onClick="again"
        android:text="@string/again"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>